Fixing bug around vertical spacing
Vertical spacing hadn't been removed from large displays breakpoint

--- a/css/mscomGrid.scss
+++ b/css/mscomGrid.scss
@@ -403,17 +403,22 @@ html {
 // Reducing padding to a reasonable size for "extremely" large displays
 @media screen and (min-width: 2000px) {
     .grid {
-        padding: 0 1em;
-        padding: 0 0.5vw;
+        padding-left: 1em;
+        padding-right: 1em;
+        padding-left: 0.5vw;
+        padding-right: 0.5vw;
         
         .row {
-            margin: 0 -1em;
-            margin: 0 -0.5vw;
+            margin-left: -1em;
+            margin-right: -1em;
+            margin-left: -0.5vw;
+            margin-right: -0.5vw;
 
             & > [class*="col-"] {
-                padding: 1em 1em;
-                padding: -webkit-calc(1em + 0.5vh) 0.5vw;
-                padding: calc(1em + 0.5vh) 0.5vw;
+                padding-left: 1em;
+                padding-right: 1em;
+                padding-left: 0.5vw;
+                padding-right: 0.5vw;
             }
         }
     }
